force-app/src/objects/ffps_vat__VAT_Report_Box_Line__c.object
<CustomObject>
    <fields>
        <fullName>ffps_vat__Report_Values__c</fullName>
        <label>Report Values</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_vat__Reverse_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Tax_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>VAT Report Box Lines</relationshipLabel>
        <relationshipName>VAT_Report_Box_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_vat__VAT_Report_Box__c</fullName>
        <label>VAT Report Box</label>
        <referenceTo>ffps_vat__VAT_Report_Line_Definition__c</referenceTo>
        <relationshipLabel>VAT Report Box Lines</relationshipLabel>
        <relationshipName>VAT_Report_Box_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>VAT Report Box Line</label>
    <nameField>
        <label>VAT Report Box Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT Report Box Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>